Added extension and university cases

--- a/index.html
+++ b/index.html
@@ -66,7 +66,16 @@
                 <select class="form-select" id="comune">
                 </select>
             </div>
-
+            <div class="col-auto">
+                <label for="extension">Estensione</label>
+                <select class="form-select" id="extension">
+                </select>
+            </div>
+            <div class="col-auto">
+                <label for="uni">Università</label>
+                <select class="form-select" id="uni">
+                </select>
+            </div>
 
         <div class="input-group" id="warningComune" style="display:none; text-align:right;max-width: 685px;">
             <input type="number" placeholder="0.9" min="0" max="1" step="0.001" id="customComune"
